languages/montiarc-fe/src/test/resources/automaton/invalid/InvalidCD.arc
package automaton.invalid;

import automaton.invalid.InvalidDatatypes.invalidType;

component InvalidCD {
  port
    in invalidType a,
    out invalidType b;
}
